[agent] add mainloop manager
This PR adds a mainloop manager to manage all mainloop processors.
This PR also adds a class "br::vendor::VendorServer" to allow other
users to implement their server in otbr-agent.

--- a/src/agent/CMakeLists.txt
+++ b/src/agent/CMakeLists.txt
@@ -33,6 +33,7 @@ add_executable(otbr-agent
     uris.hpp
     instance_params.cpp
     instance_params.hpp
+    vendor.hpp
 )
 
 target_link_libraries(otbr-agent PRIVATE
